# CEL

./: .gitattributes  .gitignore  .importlinter  .weglot-last-check  CLAUDE.md  CNAME  README.md  llms.txt  log.html  log.txt  pyproject.toml  requirements.txt  sitemap.xml  weglot.csv  wrangler.jsonc
.claude/: settings.json
.claude/commands/: preflight.md
.github/workflows/: arabic-css.yml  arabic-visual.yml  blog-image-optimization.yml  blog-summary-autopilot.yml  content-pipeline.yml  dashboard-change-password.yml  dashboard-forgot-password.yml  dashboard-reset-password.yml  lint-workflows.yml  offers-auto-extend.yml  offers-edit-item.yml  offers-edit-regions.yml  runner-acquisition-watchdog.yml  stress-test.yml  summary.yml  update-sitemap-llms.yml  weglot-daily-report.yml  weglot-sync.yml
data/: blog-optimization-log.jsonl  cel-offers-regions.json  log-state.json  offers-edit-log.json  offers-extend-log.json  weglot-exclusions.json  weglot-sitemap-exclusions.json  weglot.csv
data/arabic-visual/: ar-vancouver.css  ar-vancouver.report.md  state.json
data/seo-intel/: block-translation-memory.json  rendered-nodes.json  (+8 more)
docs/: ARCHITECTURE.md  CNAME  blog-image-optimization-setup.md  index.html  llms.txt  log.html  log.txt  robots.txt  sitemap.xml
js/: cel-offers.js
scripts/: asset_upload.py  lint_workflows.py  optimize_blog_richtext_images.py  shared_paths.py  strip_placeholder_images.py
sites/: registry.json
tools/: check_sitemap_urls.py  dashboard.py  generate_llms.sh  generate_master_sitemap.py  sites.json  test_update_log.py  update_log.py
(+643 files in other folders)
